server-rs/test_results.txt
   Compiling ciborium-ll v0.2.2
   Compiling itertools v0.10.5
   Compiling tungstenite v0.21.0
   Compiling tinytemplate v1.2.1
   Compiling ciborium v0.2.2
   Compiling tokio-tungstenite v0.21.0
   Compiling criterion-plot v0.5.0
   Compiling criterion v0.5.1
   Compiling server-rs v1.0.0 (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\server-rs)
warning: unused import: `serde_json::Value`
 --> src\main.rs:3:5
  |
3 | use serde_json::Value;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `serde_json::Value`
  --> src\state.rs:11:5
   |
11 | use serde_json::Value;
   |     ^^^^^^^^^^^^^^^^^

warning: unused import: `opentelemetry::trace::TraceContextExt`
  --> src\agent\runner\mod.rs:64:17
   |
64 |             use opentelemetry::trace::TraceContextExt;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::telemetry::TelemetryLayer`
 --> src\startup.rs:2:5
  |
2 | use crate::telemetry::TelemetryLayer;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `tokio::sync::broadcast`
 --> src\startup.rs:3:5
  |
3 | use tokio::sync::broadcast;
  |     ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `serde_json::json`
 --> src\telemetry.rs:4:5
  |
4 | use serde_json::json;
  |     ^^^^^^^^^^^^^^^^

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
   --> src\routes\agent.rs:243:20
    |
243 |             model: ModelConfig {
    |                    ^^^^^^^^^^^ missing `skills` and `workflows`

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
   --> src\routes\agent_tests.rs:138:20
    |
138 |             model: ModelConfig {
    |                    ^^^^^^^^^^^ missing `skills` and `workflows`

error[E0063]: missing field `traceparent` in initializer of `TaskPayload`
   --> src\agent\runner\mod.rs:806:9
    |
806 |         TaskPayload {
    |         ^^^^^^^^^^^ missing `traceparent`

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
   --> src\agent\runner\mod.rs:844:27
    |
844 |             model_config: crate::agent::types::ModelConfig {
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `skills` and `workflows`

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
   --> src\agent\runner\mod.rs:949:27
    |
949 |             model_config: crate::agent::types::ModelConfig {
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `skills` and `workflows`

error[E0063]: missing fields `skills` and `workflows` in initializer of `ModelConfig`
   --> src\agent\runner\mod.rs:982:27
    |
982 |             model_config: crate::agent::types::ModelConfig {
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `skills` and `workflows`

warning: unused variable: `span`
  --> src\telemetry.rs:79:13
   |
79 |         let span = ctx.span(&id).expect("Span not found");
   |             ^^^^ help: if this is intentional, prefix it with an underscore: `_span`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0063`.
warning: `server-rs` (bin "server-rs" test) generated 7 warnings
error: could not compile `server-rs` (bin "server-rs" test) due to 6 previous errors; 7 warnings emitted
